# zeroeye

./: .editorconfig  CONTRIBUTING.md  Makefile  README.md  build.py
data/: README.md
diagnostic/: build-1951c726.json  build-5032cd9d.json  build-80c0ba75.json  build-8faa0690.json  build-8faa0690.logd  build-db991709.json  build-db991709.logd
docs/: ARCHITECTURE.md  OPERATIONS.md  pre-commit-hook.md
docs/openapi/: Server.hs  v3.yaml
frailbox/: math_util.hpp  wat.cpp
frailbox/engine/: CMakeLists.txt
frailbox/engine/collision/: collision.hpp
frailbox/engine/core/: math.hpp
frontend/src/services/: telemetry.ts
frontend/src/styles/: legacy.css
tools/: check_format.sh  pre-commit  verify_diagnostics.py
